--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Hu Tao Marquee Background
+
+    All trademarks are property of their respective owners
 -->
 <html>
 	<head>
-		<title>HuTaoBackground</title>
+		<title>Hu Tao Background</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
@@ -15,117 +15,16 @@
 	<body>
         <div class="marquee">
             <div class="trackA">
-                <div class="content">Silly-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    billy-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    silly-billy hilichurl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    Frilly-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    willy-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    frilly-willy hilichurl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    Silly-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    billy-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    silly-billy hilichurl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    Frilly-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    willy-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    frilly-willy hilichurl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-
-                    Silly-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    billy-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    silly-billy hilichurl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    Frilly-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    willy-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    frilly-willy hilichurl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    Silly-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    billy-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    silly-billy hilichurl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    Frilly-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    willy-churl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                    frilly-willy hilichurl
-                    <img class="ghostA" src="images/HuTaoGhost.png">
-                </div>
+                <img src="images/row1.png"><img src="images/row1.png">
             </div>
-
             <div class="trackB">
-                <div class="content">&nbsp;Silly-churl | billy-churl | silly-billy hilichurl | Frilly-churl | willy-churl | frilly-willy hilichurl | Silly-churl | billy-churl | silly-billy hilichurl | Frilly-churl | willy-churl | frilly-willy hilichurl |</div>
+                <img src="images/row2.png"><img src="images/row2.png">
             </div>
-
             <div class="trackC">
-                <div class="content">Silly-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    billy-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    silly-billy hilichurl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    Frilly-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    willy-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    frilly-willy hilichurl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    Silly-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    billy-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    silly-billy hilichurl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    Frilly-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    willy-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    frilly-willy hilichurl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-
-                    Silly-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    billy-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    silly-billy hilichurl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    Frilly-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    willy-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    frilly-willy hilichurl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    Silly-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    billy-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    silly-billy hilichurl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    Frilly-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    willy-churl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                    frilly-willy hilichurl
-                    <img class="ghostB" src="images/HuTaoGhost.png">
-                </div>
+                <img src="images/row3.png"><img src="images/row3.png">
             </div>
-
             <div class="trackD">
-                <div class="content">&nbsp;Silly-churl | billy-churl | silly-billy hilichurl | Frilly-churl | willy-churl | frilly-willy hilichurl | Silly-churl | billy-churl | silly-billy hilichurl | Frilly-churl | willy-churl | frilly-willy hilichurl |</div>
+                <img src="images/row4.png"><img src="images/row4.png">
             </div>
         </div>
 	</body>
