Changed track classes with similar CSS to share a base class, minor indentation changes to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--
 	Hu Tao Marquee Background
 
-    All trademarks are property of their respective owners
+	All trademarks are property of their respective owners
 -->
 <html>
 	<head>
@@ -13,19 +13,19 @@
 		<link rel="icon" href="images/HuTaoGhost.png" />
 	</head>
 	<body>
-        <div class="marquee">
-            <div class="trackA">
-                <img src="images/row1.png"><img src="images/row1.png">
-            </div>
-            <div class="trackB">
-                <img src="images/row2.png"><img src="images/row2.png">
-            </div>
-            <div class="trackC">
-                <img src="images/row3.png"><img src="images/row3.png">
-            </div>
-            <div class="trackD">
-                <img src="images/row4.png"><img src="images/row4.png">
-            </div>
-        </div>
+		<div class="marquee">
+			<div id="trackA" class="track">
+				<img src="images/row1.png"><img src="images/row1.png">
+			</div>
+			<div id="trackB" class="track">
+				<img src="images/row2.png"><img src="images/row2.png">
+			</div>
+			<div id="trackC" class="track">
+				<img src="images/row3.png"><img src="images/row3.png">
+			</div>
+			<div id="trackD" class="track">
+				<img src="images/row4.png"><img src="images/row4.png">
+			</div>
+		</div>
 	</body>
 </html>
